@@ -133,7 +133,11 @@ class CFOptions(object):
                 if len(self.args)<-numargs:
                     sys.stderr.write('Error, expected at least %d arguments and got %d arguments\n'%(-numargs,len(self.args)))
                     sys.exit(1)
-
+                    
+    def __get_nfiles(self):
+        return len(self.args)-1
+    nfiles = property(__get_nfiles)
+    
     def __get_nvars(self):
         try:
             return len(self.options.vars)
