@@ -43,6 +43,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/glide_launch.py',
                       'progs/plotSpot.py',
                       'progs/plotProfile.py',
+                      'progs/plot3DProfiles.py',
                       'progs/plotCFstats.py',
                       'progs/extractProfile.py',
                       'progs/plotRSL.py',
